<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/pikachu"
    tools:context="com.example.alphabeting.sockets.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/sendText"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:gravity="top|left"
            android:background="@drawable/border_white"
            android:hint="@string/sendText"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/sendText"
            android:layout_below="@id/sendText"
            android:layout_marginTop="10dp"
            android:text="@string/send"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clean_1"
            android:layout_toLeftOf="@id/send"
            android:layout_below="@id/sendText"
            android:layout_marginTop="10dp"
            android:text="@string/clean"/>
        <TextView
            android:id="@+id/receiver"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_below="@id/send"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_white"
            android:gravity="top|left"
            android:hint="@string/receiver"
            android:textSize="20sp"
            android:scrollbars= "vertical"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clean_2"
            android:layout_below="@id/receiver"
            android:layout_alignEnd="@id/receiver"
            android:layout_marginTop="10dp"
            android:text="@string/clean" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cyperight"
            android:textSize="10sp"
            android:layout_toLeftOf="@id/clean_2"
            android:layout_below="@id/clean_2"
            android:layout_marginTop="20dp"
            />


    </RelativeLayout>


</LinearLayout>
